// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders horizontally with menu items 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
}

.emotion-0 ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin-right: 8px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #535353;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #535353;
}

.emotion-3:hover:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-3:active:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-3:active:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-3:disabled {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #c0c0c0;
}

.emotion-3:disabled svg {
  fill: #c0c0c0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<nav
    aria-label="Menu"
    class="emotion-0"
    data-testid="menu-container"
    role="navigation"
  >
    <ul>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Menu renders vertically with menu items 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
}

.emotion-0 ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  box-sizing: border-box;
  margin-bottom: 8px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 2px 0 0;
  color: #535353;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #535353;
}

.emotion-3:hover:not(:disabled) {
  background-color: #e6f4ff;
  border-style: solid;
  border-color: #0a68c1;
  border-width: 0 2px 0 0;
  color: #0a68c1;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #0a68c1;
}

.emotion-3:active:not(:disabled) {
  background-color: #d5ebff;
  border-style: solid;
  border-color: #02509b;
  border-width: 0 2px 0 0;
  color: #02509b;
}

.emotion-3:active:not(:disabled) svg {
  fill: #02509b;
}

.emotion-3:disabled {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 2px 0 0;
  color: #c0c0c0;
}

.emotion-3:disabled svg {
  fill: #c0c0c0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<nav
    aria-label="Menu"
    class="emotion-0"
    data-testid="menu-container"
    role="navigation"
  >
    <ul>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Menu renders with menu items positioned at the end 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
}

.emotion-0 ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin-right: 8px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #535353;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  text-align: right;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #535353;
}

.emotion-3:hover:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-3:active:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-3:active:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-3:disabled {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #c0c0c0;
}

.emotion-3:disabled svg {
  fill: #c0c0c0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<nav
    aria-label="Menu"
    class="emotion-0"
    data-testid="menu-container"
    role="navigation"
  >
    <ul>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Menu renders with menu items positioned at the start 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
}

.emotion-0 ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin-right: 8px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #535353;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  text-align: left;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #535353;
}

.emotion-3:hover:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-3:active:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-3:active:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-3:disabled {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #c0c0c0;
}

.emotion-3:disabled svg {
  fill: #c0c0c0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<nav
    aria-label="Menu"
    class="emotion-0"
    data-testid="menu-container"
    role="navigation"
  >
    <ul>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Menu renders with small size menu items 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
}

.emotion-0 ul {
  box-sizing: border-box;
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1 {
  box-sizing: border-box;
  margin-right: 8px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #535353;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 svg {
  fill: #535353;
}

.emotion-3:hover:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-3:hover:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-3:active:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-3:active:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-3:disabled {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #c0c0c0;
}

.emotion-3:disabled svg {
  fill: #c0c0c0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4458333333333334em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.5458333333333334em;
}

<nav
    aria-label="Menu"
    class="emotion-0"
    data-testid="menu-container"
    role="navigation"
  >
    <ul>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
      <li
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <a
            class="emotion-3"
            data-testid="buttonLink"
            href="http://"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-5"
              >
                <span
                  class="emotion-6"
                >
                  Menu item
                </span>
              </div>
            </div>
          </a>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`MenuItem renders in different sizes 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin-right: 8px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #535353;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 svg {
  fill: #535353;
}

.emotion-2:hover:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-2:active:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-2:active:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-2:disabled {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #c0c0c0;
}

.emotion-2:disabled svg {
  fill: #c0c0c0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-4 {
    max-width: 100%;
  }
}

.emotion-5 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<li
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        data-testid="buttonLink"
        href="http://"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              Menu item
            </span>
          </div>
        </div>
      </a>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MenuItem renders selected menu item with aria attributes 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin-right: 8px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #535353;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
  background-color: transparent;
  border-style: solid;
  border-color: #0a68c1;
  border-width: 0 0 2px 0;
  color: #2e2e2e;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 svg {
  fill: #535353;
}

.emotion-2:hover:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-2:active:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-2:active:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-2:disabled {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #c0c0c0;
}

.emotion-2:disabled svg {
  fill: #c0c0c0;
}

.emotion-2 svg {
  fill: #2e2e2e;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-4 {
    max-width: 100%;
  }
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-8 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-8::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-8::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<li
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        aria-current="page"
        class="emotion-2"
        data-testid="buttonLink"
        href="http://"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
              />
            </svg>
          </div>
          <div
            class="emotion-4"
          >
            <span
              class="emotion-8"
            >
              Menu item
            </span>
          </div>
        </div>
      </a>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MenuItem renders with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin-right: 8px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #535353;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 svg {
  fill: #535353;
}

.emotion-2:hover:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-2:active:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-2:active:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-2:disabled {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #c0c0c0;
}

.emotion-2:disabled svg {
  fill: #c0c0c0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-4 {
    max-width: 100%;
  }
}

.emotion-5 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<li
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        data-testid="buttonLink"
        href="http://"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              Menu item
            </span>
          </div>
        </div>
      </a>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MenuItem renders with icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin-right: 8px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  width: 100%;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #535353;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-2 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 svg {
  fill: #535353;
}

.emotion-2:hover:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-2:hover:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-2:active:not(:disabled) {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #0a0a0a;
}

.emotion-2:active:not(:disabled) svg {
  fill: #0a0a0a;
}

.emotion-2:disabled {
  background-color: transparent;
  border-style: solid;
  border-color: transparent;
  border-width: 0 0 2px 0;
  color: #c0c0c0;
}

.emotion-2:disabled svg {
  fill: #c0c0c0;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-4 {
    max-width: 100%;
  }
}

.emotion-5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2e2e2e;
  vertical-align: unset;
  display: inline-block;
}

.emotion-8 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-8::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-8::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<li
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        data-testid="buttonLink"
        href="http://"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <svg
              aria-hidden="true"
              class="emotion-5 emotion-6"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
              />
            </svg>
          </div>
          <div
            class="emotion-4"
          >
            <span
              class="emotion-8"
            >
              Menu item
            </span>
          </div>
        </div>
      </a>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MenuItem renders with overrides 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin-right: 8px;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 11px;
  width: 100%;
  padding: 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: pink;
  border-style: solid;
  border-color: darkpink;
  border-width: 0px 8px 0px 0px;
  color: red;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-2 svg {
  width: 32px;
  height: 32px;
}

.emotion-2 svg {
  fill: grey;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-12px/2);
  margin-right: calc(-12px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(12px/2);
  margin-right: calc(12px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-4 {
    max-width: 100%;
  }
}

.emotion-5 {
  font-family: "Noto Sans",sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.36250000000000004em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4625em;
}

<li
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="emotion-2"
        data-testid="buttonLink"
        href="http://"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <span
              class="emotion-5"
            >
              Menu item
            </span>
          </div>
        </div>
      </a>
    </div>
  </li>
</DocumentFragment>
`;
